# ORIE-5270-Portfolio-Optimization-with-Real-Yahoo-Finance-Data

./: .gitignore  README.md  conda.yaml  pyproject.toml  requirements.txt
notebooks/: demo.ipynb
scripts/: run_pipeline.py
src/portfolio_project/: backtest.py  data.py  features.py  metrics.py  optimization.py
tests/: test_backtest.py  test_data.py  test_features.py  test_metrics.py  test_optimization.py
