[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "portfolio_project"
version = "0.1.0"
description = "A reproducible portfolio optimization project using real Yahoo Finance data."
authors = [
    { name = "Ye Miao" }
]
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pandas",
    "yfinance",
    "scipy",
    "matplotlib"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]